Modify pom.xml to simplefly deploy process